--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="/recipes/chicken_pot_pie.html">Chicken Pot Pie</a>
+    <a href="/chicken_pot_pie.html">Chicken Pot Pie</a>
 </body>
 </html>
