--- a/otherpages/index.html
+++ b/otherpages/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Chicken Pot Pie</h1>
-    <img src="../chickenpotpie.jpg">
+    <img src="chickenpotpie.jpg">
     <h2>Description</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi cumque laudantium commodi beatae alias? Laboriosam laborum alias ex officiis itaque omnis reiciendis dolorum voluptatibus totam.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit sed eius ea quasi itaque nesciunt accusantium nemo? Magni vel, at sit vitae perferendis optio illo officia cupiditate temporibus? Maxime, magnam.</p>
